logs/kayako.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kayako'...
Compiling './lib/python3.5/site-packages/kayako/api.py'...
***   File "./lib/python3.5/site-packages/kayako/api.py", line 469
    except urllib2.HTTPError, error:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kayako/core'...
Compiling './lib/python3.5/site-packages/kayako/core/object.py'...
***   File "./lib/python3.5/site-packages/kayako/core/object.py", line 25
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kayako/objects'...
Listing './lib/python3.5/site-packages/kayako/objects/ticket'...
Compiling './lib/python3.5/site-packages/kayako/objects/ticket/ticket.py'...
***   File "./lib/python3.5/site-packages/kayako/objects/ticket/ticket.py", line 209
    except KayakoResponseError, error:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kayako/objects/ticket/ticket_attachment.py'...
***   File "./lib/python3.5/site-packages/kayako/objects/ticket/ticket_attachment.py", line 94
    except KayakoResponseError, error:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kayako/objects/ticket/ticket_custom_field.py'...
***   File "./lib/python3.5/site-packages/kayako/objects/ticket/ticket_custom_field.py", line 121
    except KayakoResponseError, error:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kayako/objects/ticket/ticket_note.py'...
***   File "./lib/python3.5/site-packages/kayako/objects/ticket/ticket_note.py", line 101
    except KayakoResponseError, error:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kayako/objects/ticket/ticket_post.py'...
***   File "./lib/python3.5/site-packages/kayako/objects/ticket/ticket_post.py", line 131
    except KayakoResponseError, error:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kayako/objects/ticket/ticket_time_track.py'...
***   File "./lib/python3.5/site-packages/kayako/objects/ticket/ticket_time_track.py", line 106
    except KayakoResponseError, error:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kayako/tests'...
Listing './lib/python3.5/site-packages/kayako/tests/core'...
Listing './lib/python3.5/site-packages/kayako/tests/object'...
Compiling './lib/python3.5/site-packages/kayako/tests/test_api.py'...
***   File "./lib/python3.5/site-packages/kayako/tests/test_api.py", line 179
    except KayakoRequestError, error:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kayako-1.1.5.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
